--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+
+}
+  
+
+@layer components {
+    .menuTab {
+      @apply bg-blue-200 border flex w-44 justify-center items-center;
+    }
+    .menuTabSelected {
+        @apply bg-blue-600 border flex w-44 justify-center items-center;
+      }
+}
